crates/talkbank-re2c-parser/tests/snapshots/parser_fixtures__main_tier_4.snap
---
source: crates/talkbank-re2c-parser/tests/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: NOF
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Action:
        zero:
          Zero: "0"
        annotations: []
  terminator:
    Period: "."
  postcodes: []
  media_bullet:
    MediaBullet:
      raw_text: "\u00154450_5600\u0015"
      start_time: "4450"
      end_time: "5600"
      skip: false
