crates/talkbank-re2c-parser/tests/snapshots/parser_fixtures__main_tier_5.snap
---
source: crates/talkbank-re2c-parser/tests/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: FAN
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Event:
        - Event: w3_33
  terminator:
    Period: "."
  postcodes: []
  media_bullet:
    MediaBullet:
      raw_text: "\u00155600_6600\u0015"
      start_time: "5600"
      end_time: "6600"
