crates/talkbank-re2c-parser/tests/snapshots/parser_fixtures__main_tier_6.snap
---
source: crates/talkbank-re2c-parser/tests/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: NOF
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Action:
        zero:
          Zero: "0"
        annotations: []
  terminator:
    Period: "."
  postcodes: []
  media_bullet:
    MediaBullet:
      start_time: "6600"
      end_time: "8130"
