crates/talkbank-re2c-parser/tests/snapshots/parser_fixtures__main_tier_7.snap
---
source: crates/talkbank-re2c-parser/tests/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: OLF
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Action:
        zero:
          Zero: "0"
        annotations: []
  terminator:
    Period: "."
  postcodes: []
  media_bullet:
    MediaBullet:
      raw_text: "\u00158130_8960\u0015"
      start_time: "8130"
      end_time: "8960"
      skip: false
