crates/talkbank-re2c-parser/tests/snapshots/parser_fixtures__main_tier_9.snap
---
source: crates/talkbank-re2c-parser/tests/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: SIL
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Action:
        zero:
          Zero: "0"
        annotations: []
  terminator:
    Period: "."
  postcodes: []
  media_bullet:
    MediaBullet:
      raw_text: "\u001510300_11100\u0015"
      start_time: "10300"
      end_time: "11100"
