crates/talkbank-re2c-parser/tests/snapshots/parser_fixtures__main_tier_rich_1.snap
---
source: crates/talkbank-re2c-parser/tests/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: FAT
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Word:
        category: Filler
        body:
          - Text: m
          - Lengthening: 1
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: "&-m:"
    - Word:
        category: ~
        body:
          - Text: guarda
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: guarda
    - Word:
        category: ~
        body:
          - Text: un
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: un
    - Word:
        category: ~
        body:
          - Text: attimo
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: attimo
    - Separator:
        Comma: ","
    - Word:
        category: ~
        body:
          - Text: "cos'è"
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: "cos'è"
    - Word:
        category: ~
        body:
          - Text: questo
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: questo
  terminator:
    Question: "?"
  postcodes: []
  media_bullet:
    MediaBullet:
      raw_text: "\u0015532330_533470\u0015"
      start_time: "532330"
      end_time: "533470"
