crates/talkbank-re2c-parser/tests/snapshots/parser_fixtures__main_tier_rich_11.snap
---
source: crates/talkbank-re2c-parser/tests/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: PAR
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Word:
        category: ~
        body:
          - Text: so
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: so
    - Separator:
        Comma: ","
    - Word:
        category: ~
        body:
          - Text: in
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: in
    - Word:
        category: ~
        body:
          - Text: the
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: the
    - Word:
        category: ~
        body:
          - Text: middle
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: middle
    - Word:
        category: ~
        body:
          - Text: of
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: of
    - Word:
        category: ~
        body:
          - Text: having
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: having
    - Word:
        category: ~
        body:
          - Text: the
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: the
    - Word:
        category: ~
        body:
          - Text: stroke
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: stroke
    - Word:
        category: ~
        body:
          - Text: literally
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: literally
    - Word:
        category: ~
        body:
          - Text: I
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: I
    - Word:
        category: Fragment
        body:
          - Text: s
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: "&+s"
    - Word:
        category: ~
        body:
          - Text: had
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: had
    - Word:
        category: ~
        body:
          - Text: a
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: a
    - Word:
        category: ~
        body:
          - Text: hundred
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: hundred
    - Word:
        category: ~
        body:
          - Text: four
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: four
    - Word:
        category: ~
        body:
          - Text: blood
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: blood
    - Word:
        category: ~
        body:
          - Text: sugar
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: sugar
    - Word:
        category: ~
        body:
          - Text: reading
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: reading
    - Word:
        category: ~
        body:
          - Text: and
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: and
    - Word:
        category: ~
        body:
          - Text: had
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: had
    - Word:
        category: ~
        body:
          - Text: normal
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: normal
    - Word:
        category: ~
        body:
          - Text: everything
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: everything
    - Word:
        category: ~
        body:
          - Text: else
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: else
    - Separator:
        Comma: ","
    - Word:
        category: ~
        body:
          - Text: I
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: I
    - Word:
        category: ~
        body:
          - Text: think
        form_marker: ~
        lang: ~
        pos_tag: ~
        annotations: []
        raw_text: think
  terminator:
    Question: "?"
  postcodes: []
  media_bullet:
    MediaBullet:
      raw_text: "\u00151242185_1253254\u0015"
      start_time: "1242185"
      end_time: "1253254"
